# turbogen

./: .gitignore  app.py  cog_requirements.txt  download_models.py  model_downloads.py  pyproject.toml  requirements.txt
apps/cog_apps/: cog.template.yaml  downloads.py
apps/cog_apps/qwen_image/: app.py  cog.yaml
apps/cog_apps/qwen_image_and_edit/: app.py  cog.yaml
apps/cog_apps/qwen_image_edit/: app.py  cog.yaml
apps/cog_apps/wan22_a14b/: app.py
apps/cog_apps/wan22_i2v/: app.py  cog.yaml
apps/cog_apps/wan22_t2v/: app.py  cog.yaml
apps/cog_apps/wan_2.2_a14b/: app.py  cog.yaml
apps/cog_apps/z_image_turbo/: app.py  cog.yaml
apps/cog_apps/zimage/: app.py  cog.yaml
apps/gradio_apps/: fast_qwen_image_and_edit.py  media_processing.py  media_scorer.py  qwen_image.py  qwen_image_and_edit.py  qwen_image_edit.py  ui_factory.py  wan22_a14b.py  wan22_i2v.py  wan22_t2v.py  wan_2.2_a14b_ti2v.py  z_image_turbo.py  zimage.py  zimage_turbo.py
core/: base_model.py  generation_pipeline.py
core/models/: __init__.py  diffusers_models.py  lightx2v_models.py
core/services/: nsfw_detector.py  prompt_enhancer.py
core/services/media_scoring/: README.md  __init__.py  image_scorer.py
core/services/media_scoring/image_scorer/: README.md  __init__.py  model.py  utils.py
core/services/media_scoring/utils/: __init__.py  vision_processing.py
core/services/media_scoring/video_scorer/: __init__.py  model.py  utils.py
core/utils/: __init__.py  image_utils.py  kernels_utils.py  memory_utils.py
models/: __init__.py  lightx2v_models.py
notebooks/: playground.ipynb  quantizer.ipynb
scripts/: deploy_cog_app.sh  refresh.sh  warmup_cog_app  warmup_cog_app.py
services/: nsfw_detector.py
src/turbogen/: generation_pipeline.py  model_downloads.py
src/turbogen/models/: base_model.py  diffusers_models.py  lightx2v_models.py
src/turbogen/services/: nsfw_detector.py  prompt_enhancer.py
src/turbogen/services/media_scoring/: __init__.py  image_scorer.py
src/turbogen/services/media_scoring/video_scorer/: __init__.py  model.py  utils.py
src/turbogen/utils/: __init__.py  core_utils.py  gradio_ui_factory.py  image_utils.py  kernels_utils.py  video_utils.py
utils/: __init__.py  image_utils.py  video_utils.py
