[build-system]
requires = ["setuptools>=80.0", "wheel", "packaging", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "turbogen"
version = "0.1.0"
authors = [{ name = "Sita Berete" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Image",
]

#gptqmodel/bitsandbytes/auto-roung  # depending on env (e.g. auto-round/bitsandbytes on huggingface zero-gpu spaces, gptqmodel preferred where compatible)
#optimum  # you also need optimum if you are using auto-round or gptqmodel
dependencies = [
  "torch>=2.9.1,<2.11.0",
  "opencv-python-headless",
  "Pillow",
  "numpy",
  "fast-thumbhash",
  "aiohttp",
  "diffusers",
  "torchao==0.15.0",                                                   # The 0.16.0 version isn't compatible with the current diffusers latest version
  "transformers>=5.0.0",
  "accelerate",
  "hf-transfer",
  "huggingface-hub",
  "timm",
  "piexif",
  "sgl-kernel",
  "triton",
  "kernels",
  "decord",
  "lightx2v @ git+https://github.com/sitatec/LightX2V.git@torch2.9.1",
]

[project.urls]
Repository = "https://github.com/sitatec/turbogen.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["turbogen*"]

[tool.ruff]
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "dist",
  "build",
  "__pycache__",
  "*.egg-info",
  ".pytest_cache",
  ".cluade",
  ".cursor",
]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint.isort]
known-first-party = ["turbogen"]
case-sensitive = true

[tool.pyrefly]
search-path = ["./"]
